# sensor_data_fusion

./: OFLogFile.json  Readme.md
Client/: CMakeLists.txt
Client/inc/: IFusionInterface.h  ISensorInterface.h
Client/src/: IFusionInterface.cpp  ISensorInterface.cpp  JSONFileLogger.cpp  main.cpp
Server/src/: SensorServer.cpp
inc/: Definitions.h
